2005-12-13 aurel
* Update way of install Business Template
- add Trash type
- modify Workflow_statusModiify
- add Forms and Scripts in erp5_core
* Change in script of rule_interraction_workflow

2005-12-13 romain
* Fix Base_edit (when displaying multiple matrixbox)

2005-12-08 yo
* Fix the LEFT JOIN syntax in Resource_zGetInventory and Resource_zGetInventoryList.

2005-12-08 Kevin
* Transform tuple to list to let ERP5Type_asSecurityGroupId do a sort.

2005-12-07 yo
* New skins: erp5_html.css and  form_html for PDF editing.

2005-12-04 Jean-Paul
* Made a minimal and somehow broken implementation of global search box (top right) to prevent displaying uggly search results. Improving it requires redirection and filtering

2005-11-25 Jérome
* hook manage_afterClone in rule_interraction workflow,  as "Later Script" (ie activity) because it is called too soon and some scripts are not available yet.

2005-11-30 yo
* portal_assignment_base_category_list is removed.
* Portal Types are modified for groups.

2005-11-30 yo
* BaseCategory_view supports category types.

2005-11-30 yo
* AccountingPreferences_view uses my_preferred_accounting_transaction_gap instead of my_gap.

2005-11-25 Jérome
* hook manage_afterClone in rule_interraction workflow, so that matrix is updated on installation

2005-11-23 Romain
* added getPortalSupplyTypeList to the acquisition portal type of the base category resource.

2005-11-22 Alex
* use getDefaultModule() in a script instead of statically using a module id.

2005-11-22 Jérome
* added proxy roles in simulation_movement_interaction_workflow/SimulationMovement_editDeliveryValue
* bug fix rule_interaction_workflow, it was hooking manage_delObject (without s)

2005-11-21 yo
* breadcrumbs translates the first two titles with ui instead of content. Disable the translation of the rest for now.

2005-11-18 yo
* ERP5Type_getSecurityCategoryFromAssignment should not return None

2005-11-16 Seb
* Removed the limit of 1000 in
Resource_zGetInventoryList
