@@ -143,7 +143,7 @@
         </item>
         <item>
             <key> <string>title</string> </key>
-            <value> <string>Validate installation</string> </value>
+            <value> <string>Validate Installation</string> </value>
         </item>
         <item>
             <key> <string>unicode_mode</string> </key>
