@@ -339,7 +339,7 @@
                       <list>
                         <tuple>
                           <string>url</string>
-                          <string>Url</string>
+                          <string>URL</string>
                         </tuple>
                       </list>
                     </value>
