@@ -245,7 +245,7 @@
                 </item>
                 <item>
                     <key> <string>title</string> </key>
-                    <value> <string>Business Template Id</string> </value>
+                    <value> <string>Business Template ID</string> </value>
                 </item>
                 <item>
                     <key> <string>truncate</string> </key>
