@@ -243,7 +243,7 @@
                 </item>
                 <item>
                     <key> <string>title</string> </key>
-                    <value> <string>Id</string> </value>
+                    <value> <string>ID</string> </value>
                 </item>
                 <item>
                     <key> <string>truncate</string> </key>
